# prom_test

./: Cargo.toml  README.md  justfile  rust-toolchain.toml  update-samples.sh
cmd/: Cargo.toml
cmd/src/: api.rs  http.rs  lib.rs  main.rs
deploy/k8s/: greptimedb.yaml  prometheus.yaml  promtest.yaml  ubuntu.yaml
examples/: arrow.rs  datafusion.rs  datafusion_dataframe.rs  datafusion_plan.rs  promql.rs  simple_udaf.rs  test.rs  time.rs  udaf_irate.rs  udaf_rate.rs  udaf_sum.rs
function-macro/: Cargo.toml
lib/function-macro/: Cargo.toml
lib/function-macro/src/: lib.rs
lib/promql/: Cargo.toml
lib/promql/src/: error.rs  planner.rs  range_array.rs
lib/promql/src/extension_plan/: empty_metric.rs  instant_manipulate.rs  normalize.rs  range_manipulate.rs
lib/promql/src/functions/: aggr_over_time.rs  changes.rs  deriv.rs  idelta.rs  resets.rs
newpromql/: Cargo.toml
newpromql/benches/: it.rs
newpromql/src/: aggregation.rs  engine.rs  exec.rs  labels.rs  lib.rs  value.rs
newpromql/src/aggregations/: avg.rs  bottomk.rs  count.rs  max.rs  min.rs  mod.rs  sum.rs  topk.rs
newpromql/src/datafusion/: match_udf.rs  mod.rs
newpromql/src/functions/: avg_over_time.rs  count_over_time.rs  delta.rs  histogram.rs  idelta.rs  increase.rs  irate.rs  max_over_time.rs  min_over_time.rs  mod.rs  rate.rs  sum_over_time.rs
samples/: counter.json  gauge.json  guage.json  histogram_bucket.json  histogram_count.json  histogram_sum.json
src/: main.rs
src/cmd/: Cargo.toml
src/cmd/src/: main.rs  main2.rs
src/newpromql/: Cargo.toml
src/newpromql/src/: aggregation.rs  engine.rs  function.rs  labels.rs  lib.rs  value.rs
src/newpromql/src/function/: irate.rs  mod.rs  rate.rs
src/newpromql/src/functions/: irate.rs  mod.rs  rate.rs
src/promql/: Cargo.toml
src/promql/src/: planner.rs
src/promql/src/extension_plan/: empty_metric.rs  instant_manipulate.rs  series_divide.rs
src/promql/src/functions/: aggr_over_time.rs  changes.rs  deriv.rs  extrapolate_rate.rs  quantile.rs  resets.rs
