[workspace.package]
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"

[workspace]
members = ["src/promql", "src/newpromql", "src/function-macro", "src/cmd"]

[workspace.dependencies]
async-trait = "0.1"
datafusion = { version = "22" }
datafusion-common = { version = "22" }
datafusion-expr = { version = "22" }
datafusion-optimizer = { version = "22" }
datafusion-physical-expr = { version = "22" }
datafusion-sql = { version = "22" }
snafu = { version = "0.7", features = ["backtraces"] }
tokio = { version = "1.24.2", features = ["full"] }
tokio-util = "0.7"
