[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace]
members = ["newpromql", "cmd"]

[workspace.dependencies]
arrow = { version = "36", features = ["simd", "ipc_compression"] }
datafusion = { version = "22", features = ["simd"] }
serde = { version = "1.0", features = ["derive", "rc"] }
time = "0.3"
tracing = "0.1"
