[package]
name = "newpromql"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-recursion = "1.0"
datafusion.workspace = true
md5 = "0.7"
promql-parser = "0.1"
serde.workspace = true
strum = { version = "0.24", features = ["derive"] }
strum_macros = "0.24"
time.workspace = true
once_cell = "1.17"
regex = "1.7"
regex-syntax = "0.6"

[dev-dependencies]
expect-test = "1.4"
tokio = { version = "1.27", features = ["full"] }
