[package]
name = "newpromql"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow.workspace = true
async-recursion = "1.0"
datafusion.workspace = true
md5 = "0.7"
once_cell = "1.17"
promql-parser = "0.1"
regex = "1.7"
regex-syntax = "0.6"
serde.workspace = true
strum = { version = "0.24", features = ["derive"] }
time.workspace = true

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio"] }
expect-test = "1.4"
prom-test = { path = "../cmd" }
tokio = { version = "1.27", features = ["full"] }

[[bench]]
name = "it"
harness = false
