[package]
name = "newpromql"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
arrow.workspace = true
async-recursion = "1.0"
blake3 = "1.3"
datafusion.workspace = true
hex = "0.4"
indexmap = { version = "1.9", features = ["serde"] }
itertools = "0.10"
once_cell = "1.17"
promql-parser = "0.1"
regex = "1.7"
regex-syntax = "0.6"
rustc-hash = "1.1.0"
serde.workspace = true
strum = { version = "0.24", features = ["derive"] }
time.workspace = true
tracing = "0.1"

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio"] }
expect-test = "1.4"
prom-test = { path = "../cmd" }
tokio = { version = "1.27", features = ["full"] }

[[bench]]
name = "it"
harness = false
