[package]
name = "prom_test_bin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
promql-parser = "0.1.0"
promql = { path = "../promql" }

arrow = { version = "36.0", features = ["simd", "ipc_compression"] }
arrow-array = "36.0"
arrow-flight = "36.0"
arrow-schema = { version = "36.0", features = ["serde"] }
async-stream = "0.3"
anyhow = "1.0"
bytes = "1.4"
chrono = { version = "0.4", default-features = false, features = [
    "clock",
    "serde",
] }
datafusion.workspace = true
futures = "0.3"
futures-util = "0.3"
parquet = { version = "36.0", features = ["arrow", "async"] }
paste = "1.0"
prost = "0.11"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlparser = "0.32"
tempfile = "3"
tonic = { version = "0.8", features = ["tls"] }
uuid = { version = "1", features = ["serde", "v4", "fast-rng"] }
dashmap = { version = "5.4.0", features = ["serde"] }
parking_lot = "0.12"
time = "0.3.17"
lazy_static = "1.4.0"
env_logger = "0.10"
log = "0.4.17"
tokio.workspace = true