[package]
name = "newpromql"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
async-recursion = "1.0"
async-trait.workspace = true
bytemuck = "1.12"
function-macro = { path = "../function-macro" }
datafusion.workspace = true
futures = "0.3"
promql-parser = "0.1.0"
snafu = { version = "0.7", features = ["backtraces"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
tokio.workspace = true
